--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                   </div>
                   <br>
                   <div class="showcase-item-title">
-                    <a href="https://apple-bootstrap-f2dbc.netlify.app/" target="_blank" rel="noreferrer"
+                    <a href="https://apple-com-replica-bootstrap-master.vercel.app/" target="_blank" rel="noreferrer"
                       class="btn">Visit
                       Site</a>
                   </div>
@@ -454,7 +454,8 @@
                   </div>
                   <br>
                   <div class="showcase-item-title">
-                    <a href="https://netflix-d67bb5.netlify.app" target="_blank" rel="noreferrer" class="btn">Visit
+                    <a href="https://netflix-clone-zeta-lovat.vercel.app/" target="_blank" rel="noreferrer"
+                      class="btn">Visit
                       Site</a>
                   </div>
                 </div>
@@ -493,7 +494,8 @@
                   </div>
                   <br>
                   <div class="showcase-item-title">
-                    <a href="https://instagram-781ed9.netlify.app/" target="_blank" rel="noreferrer" class="btn">Visit
+                    <a href="https://instagram-app-clone-delta.vercel.app/" target="_blank" rel="noreferrer"
+                      class="btn">Visit
                       Site</a>
                   </div>
                 </div>
