--- a/index.html
+++ b/index.html
@@ -524,6 +524,25 @@
               </figcaption>
             </figure>
           </div>
+          <div class="isotope-item col-md-6 col-lg-4 middle-portfolio">
+            <figure class="showcase-item">
+              <div class="showcase-item-thumbnail"><img alt="" src="./assets/img/Weather-app.png"></div>
+              <figcaption class="showcase-item-hover">
+                <div class="showcase-item-info">
+                  <div class="showcase-item-category">Weather-App <br> React </div>
+                  <div class="showcase-item-title">
+                    <a href="https://github.com/Geda2519/Weather-app" target="_blank" rel="noreferrer" class="btn">View
+                      Code On Github</a>
+                  </div>
+                  <br>
+                  <div class="showcase-item-title">
+                    <a href="https://weather-app-4rcy.onrender.com/" target="_blank" rel="noreferrer" class="btn">Visit
+                      Site</a>
+                  </div>
+                </div>
+              </figcaption>
+            </figure>
+          </div>
 
         </div>
       </div>
