--- a/index.html
+++ b/index.html
@@ -526,12 +526,12 @@
           </div>
           <div class="isotope-item col-md-6 col-lg-4 middle-portfolio">
             <figure class="showcase-item">
-              <div class="showcase-item-thumbnail"><img alt="" src="./assets/img/Weather-app.png"></div>
+              <div class="showcase-item-thumbnail"><img alt="" src=""></div>
               <figcaption class="showcase-item-hover">
                 <div class="showcase-item-info">
                   <div class="showcase-item-category">Weather-App <br> React </div>
                   <div class="showcase-item-title">
-                    <a href="https://github.com/Geda2519/Weather-app" target="_blank" rel="noreferrer" class="btn">View
+                    <a href="https://to-do-app-plum-nine.vercel.app/" target="_blank" rel="noreferrer" class="btn">View
                       Code On Github</a>
                   </div>
                   <br>
