--- a/index.html
+++ b/index.html
@@ -531,12 +531,12 @@
                 <div class="showcase-item-info">
                   <div class="showcase-item-category">Weather-App <br> React </div>
                   <div class="showcase-item-title">
-                    <a href="https://to-do-app-plum-nine.vercel.app/" target="_blank" rel="noreferrer" class="btn">View
+                    <a href="https://github.com/Geda2519/Weather-app" target="_blank" rel="noreferrer" class="btn">View
                       Code On Github</a>
                   </div>
                   <br>
                   <div class="showcase-item-title">
-                    <a href="https://weather-app-4rcy.onrender.com/" target="_blank" rel="noreferrer" class="btn">Visit
+                    <a href="https://to-do-app-plum-nine.vercel.app/" target="_blank" rel="noreferrer" class="btn">Visit
                       Site</a>
                   </div>
                 </div>
