--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
           </div>
           <div class="isotope-item col-md-6 col-lg-4 middle-portfolio">
             <figure class="showcase-item">
-              <div class="showcase-item-thumbnail"><img alt="" src=""></div>
+              <div class="showcase-item-thumbnail"><img alt="" src="./assets/img/Weather-app.png"></div>
               <figcaption class="showcase-item-hover">
                 <div class="showcase-item-info">
                   <div class="showcase-item-category">Weather-App <br> React </div>
@@ -536,7 +536,7 @@
                   </div>
                   <br>
                   <div class="showcase-item-title">
-                    <a href="https://to-do-app-plum-nine.vercel.app/" target="_blank" rel="noreferrer" class="btn">Visit
+                    <a href="https://weather-app-4rcy.onrender.com/" target="_blank" rel="noreferrer" class="btn">Visit
                       Site</a>
                   </div>
                 </div>
