--- a/index.html
+++ b/index.html
@@ -751,9 +751,21 @@
     <!--   *** Footer Section Ends ***   -->
     <!-- End  Footer -->
 
-    <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+    <div id="preloader">
+  <div class="loader-name">
+    <span>G</span>
+    <span>E</span>
+    <span>D</span>
+    <span>I</span>
+    <span>O</span>
+    <span>N</span>
+  </div>
+</div>
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+  <i class="bi bi-arrow-up-short"></i>
+</a>
+
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
@@ -865,6 +877,14 @@
     duration: 1,
     ease: "power2.out",
   });
+</script>
+<script>
+window.addEventListener("load", () => {
+  const preloader = document.getElementById("preloader");
+  preloader.style.opacity = "0";
+  preloader.style.pointerEvents = "none";
+  setTimeout(() => preloader.remove(), 600);
+});
 </script>
 
 </body>
