--- a/index.html
+++ b/index.html
@@ -751,16 +751,21 @@
     <!--   *** Footer Section Ends ***   -->
     <!-- End  Footer -->
 
-    <div id="preloader">
-  <div class="loader-name">
-    <span>G</span>
-    <span>E</span>
-    <span>D</span>
-    <span>I</span>
-    <span>O</span>
-    <span>N</span>
+   <div id="preloader">
+  <div class="preloader-content">
+    <img src="images/gedion.png" alt="Gedion Logo" class="preloader-logo" />
+
+    <div class="loader-name">
+      <span>G</span>
+      <span>E</span>
+      <span>D</span>
+      <span>I</span>
+      <span>O</span>
+      <span>N</span>
+    </div>
   </div>
 </div>
+
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
   <i class="bi bi-arrow-up-short"></i>
@@ -882,10 +887,11 @@
 window.addEventListener("load", () => {
   const preloader = document.getElementById("preloader");
   preloader.style.opacity = "0";
-  preloader.style.pointerEvents = "none";
+  preloader.style.transition = "0.6s ease";
   setTimeout(() => preloader.remove(), 600);
 });
 </script>
+
 
 </body>
 
