--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 
    <div id="preloader">
   <div class="preloader-content">
-    <img src="images/gedion.png" alt="Gedion Logo" class="preloader-logo" />
+    <img src="./assets/img/port.png" alt="Gedion Logo" class="preloader-logo" />
 
     <div class="loader-name">
       <span>G</span>
