--- a/index.html
+++ b/index.html
@@ -751,9 +751,11 @@
     <!--   *** Footer Section Ends ***   -->
     <!-- End  Footer -->
 
-   <div id="preloader">
+  <div id="preloader">
   <div class="preloader-content">
-    <img src="./assets/img/port.png" alt="Gedion Logo" class="preloader-logo" />
+    <div class="logo-circle">
+      <img src="./assets/img/port.png" alt="Gedion Logo" />
+    </div>
 
     <div class="loader-name">
       <span>G</span>
@@ -765,6 +767,7 @@
     </div>
   </div>
 </div>
+
 
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
@@ -891,6 +894,7 @@ window.addEventListener("load", () => {
   setTimeout(() => preloader.remove(), 600);
 });
 </script>
+
 
 
 </body>
