--- a/index.html
+++ b/index.html
@@ -653,7 +653,10 @@
         <input type="checkbox" id="payment">
         <label for="payment">Add Payment Gateway (Telebirr/Chapa) — <strong>+10,000 ETB</strong></label>
       </div>
-      <div class="addon-item"> <input type="checkbox" class="addon" data-price="2000" data-days="0" id="hosting"> <label for="hosting">Hosting & Domain (+4k ETB)</label> </div>
+      
+        <input type="checkbox" id="payment">
+        <label for="payment">Hosting & Domain — <strong>+4,000 ETB</strong></label>
+      </div>
     </div>
   </div>
 </section>
