--- a/index.html
+++ b/index.html
@@ -653,11 +653,15 @@
         <input type="checkbox" id="payment">
         <label for="payment">Add Payment Gateway (Telebirr/Chapa) — <strong>+10,000 ETB</strong></label>
       </div>
-      
+      <div class="addon-item">
         <input type="checkbox" id="payment">
-        <label for="payment">Hosting & Domain — <strong>+4,000 ETB</strong></label>
+        <label for="payment">Hosting & Domain One Year — <strong>+4,000 ETB</strong></label>
+      </div>
+        <!-- <input type="checkbox" id="payment">
+        <label for="payment">Hosting & Domain — <strong>+4,000 ETB</strong></label> -->
       </div>
     </div>
+
   </div>
 </section>
 
